# sql-str-creator

./: .gitignore  Cargo.toml  README.md
gen-sql-statement-derive/: Cargo.toml
gen_sql_statement/: Cargo.toml
gen_sql_statement/src/: lib.rs
gen_sql_statement/tests/: export_test.rs
gen_sql_statement_derive/: Cargo.toml
gen_sql_statement_derive/src/: field_processor.rs  lib.rs
gen_sql_statement_derive/src/gen_sql_str/: gen_create_table_sql_str.rs  gen_insert_sql_str.rs  mod.rs
gen_sql_statement_derive/tests/: test_macros.rs
gen_sql_statement_trait/: Cargo.toml
sql_statement_derive/: Cargo.toml
sql_statement_derive/src/: lib.rs
sql_statement_derive/src/gen_sql_str/: gen_insert_sql_str.rs  mod.rs
sql_statement_derive/tests/: sql_test.rs  test_macros.rs
sql_statement_gen/: Cargo.toml  LICENSE  README.md
sql_statement_gen/src/: lib.rs
sql_statement_gen/tests/: export_test.rs
sql_statement_trait/: Cargo.toml  LICENSE
sql_statement_trait/src/: core.rs  error.rs  lib.rs
src/: database_config.rs  field_processor.rs  gen_sql_str.rs  lib.rs  type_mapper.rs
tests/: test_macros.rs
