[package]
name = "gen-sql-statement-derive"
version = "0.0.1"
edition = "2024"
description = "derive macro for generating SQL statements, add crate 'gen-sql-statement' instead"
license = "MIT"
repository = "https://github.com/aranair/gen-sql-statement"

[lib]
proc-macro = true


[dependencies]
gen-sql-statement-trait = {version = "0.0.1", path = "../gen-sql-statement-trait" }
quote = "1.0"
proc-macro2 = "1.0"
rusqlite = "0.39.0"