[package]
name = "gen_sql_statement"
version = "0.0.1"
authors = ["Aran Z <heyaranzheng@hotmail.com>"]
edition = "2024"
license = "MIT"  
repository = "https://github.com/heyaranzheng/gen-sql-statement"
keywords = ["sql","statement", "proc-macro", "database"]
description = "A simple macro to generate a specific SQL statement when we have a structure. Support SQLite first"

[dependencies]
gen_sql_statement_trait = {version = "0.0.1", path = "../gen_sql_statement_trait"}
gen_sql_statement_derive = {version = "0.0.1", path = "../gen_sql_statement_derive"}


