[package]
name = "gen_sql_statement_derive"
version = "0.0.1"
edition = "2021"
description = "derive macro for generating SQL statements, add crate 'gen-sql-statement' instead"
license = "MIT"
repository = "https://github.com/aranair/gen-sql-statement"

[lib]
proc-macro = true


[dependencies]
gen_sql_statement_trait = {version = "0.0.1", path = "../gen_sql_statement_trait" }
quote = "1.0"
proc-macro2 = "1.0"
rusqlite = "0.39.0"
syn = "1.0.86"

[features]
default = ["only-for-sqlite"]
only-for-sqlite = []
only-for-postgresql = []